--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
   
   label  {
     font-size: 1.1em;
+    margin-right: 10px; 
   }
   
   #title {
@@ -24,7 +25,8 @@ html {
     background-color: rgb(61, 61, 61);
     font-size: 1.1em;
     color: white;
-    
+    margin-top: 10px;
+    margin-bottom: 20px;
     border: none;
     border-radius: 3px;
     font-weight: normal;
@@ -59,16 +61,33 @@ html {
     padding: 1em;
     color:black;
   }
-  
   button {
     margin-top: 1em;
+    margin: 2em;
     background-color: rgb(8, 74, 3);
     font-size: 1.1em;
     color: white;
-    padding: .25em .5em .25em .5em;
+    padding: .5em 1em;
     border: none;
-    border-radius: 3px;
-    font-weight: normal;
+    border-radius: 5px;
+    font-weight: bold;
+    text-transform: uppercase;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, color 0.3s;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: rgb(15, 132, 4);
+    color: white;
+  }
+  
+  button:focus {
+    outline: none;
+  }
+  
+  button:active {
+    transform: translateY(1px);
   }
   
   rect:hover, circle:hover, text.circle:hover, text.rect:hover {
@@ -95,4 +114,5 @@ html {
     top: 10px;
     left: 0;
   }
+  
   
