--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
   }
   
   body {
-    background-color: rgb(255, 255, 255);
+    background-color: #D4E2D4;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -19,6 +19,11 @@ html {
     font-size: 1.1em;
     margin-right: 10px; 
   }
+
+  header {
+    background-color: #D4E2D4;
+    /* Add any other desired styles for the header here */
+}
   
   #title { 
     background-color: rgb(61, 61, 61);
@@ -44,7 +49,18 @@ html {
     width: 500px;
     padding: .5em;
     border-radius: 5px;
+    animation: catchyOutline 2s infinite alternate;
   }
+  
+  @keyframes catchyOutline {
+    0% {
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0.1);
+    }
+    100% {
+      box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.5);
+    }
+  }
+  
   
   #visual-title {
     font-weight: bold;
@@ -64,8 +80,12 @@ html {
     margin-top: 10px;
     color:black;
   }
+  #options {
+    display: flex;
+    justify-content: center;
+  }
+  
   button {
-    margin-top: 1em;
     margin: 2em;
     background-color: rgb(8, 74, 3);
     font-size: 1.1em;
@@ -79,7 +99,6 @@ html {
     transition: background-color 0.3s, color 0.3s;
     cursor: pointer;
   }
-  
   button:hover {
     background-color: rgb(15, 132, 4);
     color: white;
@@ -117,5 +136,6 @@ html {
     top: 10px;
     left: 0;
   }
+  
   
   
